@@ -1,3 +1,7 @@
+## 0.x.x / 2019-xx-xx
+
+* [ENHANCEMENT] (K8s) Add BRIGADE_NAMESPACE env var to set default brigade namespace without the need to use the --namespace flag.
+
 ## 0.9.0 / 2018-12-25
 
 * [ENHANCEMENT] (Brigade) Update to Brigade v0.19.
